--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -71,6 +71,10 @@
         margin-top: 21px;
         height: 40px;
         padding: 5px 0;
+
+        &:hover {
+            background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
+        }
     }
 
     h1 {
@@ -79,6 +83,10 @@
 
     .h1 {
         font-size: 30px;
+    }
+
+    .send_an_application:hover {
+        background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
     }
 
     .container_2 {
@@ -276,6 +284,17 @@
     }
     .menu {
         width: 85%;
+
+        &_item {
+            width: 100%;
+            padding: 5px 0;
+
+            a {
+               width: 100%;
+               display: flex;
+               justify-content: center;
+            }
+        }
     }
     
     .supheader {
