--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,13 @@
-* {
-    margin: 0 auto;
-    font-family: "Roboto", sans-serif;
-}
 @import "mixins";
 @import "variables";
 @import "general";
 @import "media";
+
+* {
+    margin: 0 auto;
+    font-family: "museo Sans Cyrl", sans-serif;
+}
+
+.container {
+    max-width: 950px;
+}
